@@ -1,5 +1,7 @@
 2013-05-15  Andy Buckley  <andy.buckley@cern.ch>
 
+	* Many 1.0 -> weight bugfixes in ATLAS_2011_I945498.
+
 	* yaml-cpp v3 support re-introduced in .info parsing.
 
 	* Lots of analysis clean-ups for YODA TODO issues.
